Version 1.42 2007-XX-XX
=======================	
* Yet another smp fix

Version 1.41 2007-03-31
=======================	
* Fixed soft-lockup issue when multiple network devices are used
* Fixed a bug when unloading driver
* Fixed issues with recent RT-preempt patch

Version 1.40 2007-03-29
=======================	
* The workaround for large memory allocations (needed by Atheros drivers)
  with 2.6.19+ kernels, introduced in version 1.33, causes soft-lockup
  with smp. This is now fixed.

Version 1.39 2007-03-23
=======================	
* An smp issue is fixed
* When initializing a card that supports 802.11a and either 802.11g or b, set
  the mode to 802.11g or b, as 802.11a is far less common
* Added support for driver for Atheros device with PCI ID 168C:1014
* Fixed issue with initializing athfmwdl driver (for atheros USB cards)

Version 1.38 2007-02-28
=======================	
* Fixed ndiswrapper script so it installs drivers for certain PCMCIA cards
  (which have bus type 8, instead of 5)
* Fixed compilation issues with 2.4 kernels

Version 1.37 2007-02-02
=======================	
* This time, really fixed the ndiswrapper script for sis163u driver (wrong
  version was packaged with 1.36, although issue was fixed in svn a few days
  ago)

Version 1.36 2007-02-01
=======================	
* Fixed ndiswrapper script (broken since 1.23 for sis163u driver)
* Implemented full scatter/gather lists (not tested)
* Implemented support for hardware tcp/ip checksumming (through NDIS)

Version 1.35 2007-01-28
=======================	
* Fixed a bug with scatter/gather. With this rt61 from RaLink and VT6655 from
  VIA drivers transmit data. Other drivers that associated but didn't transmit
  data (e.g., RT8855, Airgo's Gen3 PCI with ID 17CB:0002) may also work.

Version 1.34 2007-01-08
=======================	
* Provide workaround for large memory allocations in interrupt context with
  2.6.19+ kernels. With this, atheros (and other?) drivers don't need kernel
  to be patched.
